--- a/index.html
+++ b/index.html
@@ -3,15 +3,21 @@
 	<head>
 		<meta charset="utf-8" />
 		<title> Om Dawid Tymicz </title>
+		<script src="java.js"></script>
+		<link href="index.css" rel="stylesheet"> 
 	</head>
 	<body>
-		<h1> Dawid Tymicz </h1>
+		<h1 id=rubrik> Dawid Tymicz </h1>
 		<img src="e068c54324358b15aa0f1d4fea9f772e.jpg" width="256" height="256" alt="Hejsan" />
 		<h2> Erfarenheter </h2>
 		<p> Jag har ingen enfarenhet när det gäller webbutveckling. Jag kan litegrann om datorer, hårddiskar osv. </p>
 		<h2> Tankar om framtiden </h2>
 		<p> Jag vill skapa min egen sida som kommer tala om vem jag är och om mina medias som YouTube kanal eller min Twitch.tv kanal. Jag hoppas lära mig om alla möjliga commands för att göra min sida så originell så möjligt.</p>
-		<a href="http://www.ntigymnasiet.se/sodertalje"> NTI Gymnasiet </a>
-		<a href="../recept-uppgift/recept.html"> <h3> Min receptlista </h3> </a>
+		<h3> Min skola: <a href="http://www.ntigymnasiet.se/sodertalje"> NTI Gymnasiet </a> </h3>
+		<h3> Min Twitch.tv: <a href="https://www.twitch.tv/JustTuneTV"> JustTuneTV</a></h3>
+		</br>
+		</br>
+		<button id="but" onmousedown="mouseDown()" onmouseup="mouseUp()"> Get me out! </button>
+
 	</body>
 </html>
